# ferricode

./: AGENTS.md  Cargo.toml  README.md  SPEC.md  dprint.json
.github/workflows/: ci.yml
crates/ferric/: Cargo.toml
crates/ferric/src/: main.rs
crates/ferricode-core/: Cargo.toml
crates/ferricode-core/src/: lib.rs
crates/ferricode-core/src/tools/: list_directory.rs  mod.rs  read_file.rs
crates/ferricode-openai-codex/: Cargo.toml
crates/ferricode-openai-codex/src/: lib.rs
crates/ferricode-tui/: Cargo.toml
crates/ferricode-tui/src/: lib.rs
docs/: tools.md
