[package]
name = "ferric"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ferricode-core = { version = "0.1.0", path = "../ferricode-core" }
ferricode-tui = { version = "0.1.0", path = "../ferricode-tui" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
