[package]
name = "ferric"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ferricode-core = { version = "0.1.0", path = "../ferricode-core" }
ferricode-openai-codex = { version = "0.1.0", path = "../ferricode-openai-codex" }
ferricode-tui = { version = "0.1.0", path = "../ferricode-tui" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
