[package]
name = "ferricode-openai-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
ferricode-core = { version = "0.1.0", path = "../ferricode-core" }
rand = "0.9.4"
reqwest = { version = "0.13.2", default-features = false, features = ["form", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "1.1.2"
url = "2.5.8"
webbrowser = "1.0.6"

[dev-dependencies]
tempfile = "3.27.0"
